# erpusa

./: README.md  pyproject.toml
erpusa/: hooks.py  modules.txt
erpusa/erpusa_accounts/utils/: sales_invoice.py
erpusa/fixtures/: custom_field.json
erpusa/payroll_plus/overrides/: salary_slip_override.py
erpusa/payroll_plus/utils/: salary_structure_assignment.py  salary_structure_assignment.py.cumulative
erpusa/post_installation/: create_docs.py
erpusa/public/css/: stripe_plus.css
erpusa/public/js/: auto_repeat.js  customer.js  payment_entry.js  payment_request.js  salary_slip.js  salary_structure_assignment.js  sales_invoice_list.js  subscription.js  subscription_plan.js
erpusa/stripe_plus/api/: webhook_receiver.py  webhook_receiver_subscription.py
erpusa/stripe_plus/custom/: payment_entry.json  payment_request.json
erpusa/stripe_plus/hook/: daily_task.py  minutely_task.py  monthly_task.py
erpusa/stripe_plus/overrides/: auto_repeat_override.py  payment_request_override.py  stripe_settings_override.py  subscription_dashboard_override.py  subscription_override.py
erpusa/templates/: web.html2025020425
erpusa/templates/html/: advance_payment.html  card_expiry_notification.html  daily_digest.html  daily_digest_detailed.html  journal_entry_errors.html  merchant_payment_errors.html  payment_receipt.html  realtime.html  subscription.html  subscription_plan_table.html  subscription_update_request.html  subscription_welcome.html  test_pay_slip.html
erpusa/templates/includes/: stripe_plus_checkout.js  (+4 more)
erpusa/www/: subscriptions.html  subscriptions.py
(+93 files in other folders)
